update feature login and user profile

--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -6,6 +6,7 @@
   "emailLabel": "Email",
   "forgotPassword": "Forgot password?",
   "registerTitle": "Create new account",
+  "updateInfoTitle": "Update your profile",
   "firstName": "First Name",
   "lastName": "Last Name",
   "username": "Username",
