--- a/assets/locale/localization_vi.json
+++ b/assets/locale/localization_vi.json
@@ -6,6 +6,7 @@
   "emailLabel": "Email",
   "forgotPassword": "Quên mật khẩu?",
   "registerTitle": "Tạo mới tài khoản",
+  "updateInfoTitle": "Cập nhật thông tin",
   "firstName": "Họ",
   "lastName": "Tên",
   "username": "Tên đăng nhập",
