[02/05/2022 - KhoiLDA] Resolve conflict

--- a/assets/locale/localization_en.json
+++ b/assets/locale/localization_en.json
@@ -4,15 +4,16 @@
   "errorMsgCommon": "Field invalid",
   "errorMsgEmail": "Please enter Email",
   "emailLabel": "Email",
-  "forgotPassword": "Forgot password?",
-  "registerTitle": "Create new account",
-  "updateInfoTitle": "Update your profile",
+  "forgotPassword": "Quên mật khẩu?",
+  "changePassword": "Đổi mật khẩu",
+  "registerTitle": "Đăng ký",
+  "updateInfoTitle": "Cập nhật thông tin",
   "firstName": "First Name",
   "lastName": "Last Name",
   "username": "Username",
-  "dob": "Date of birth",
+  "dob": "Ngày sinh",
   "dummyShipping1": "Lor is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.",
-  "loginTitle": "Login",
+  "loginTitle": "Đăng nhập",
   "facebook": "Facebook",
   "google": "Google"
 }
